--- a/index.html
+++ b/index.html
@@ -1,136 +1,221 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mingzat&family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Mingzat&family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
 
-        <div class="top-header-upper"> 
-    <div class="top-header-upper-wrapper">
-        <img src="the met logo.png" width="3.5%">  
-        <ul>
-            <button class="ticket">Buy tickets</button>
-            <li>Become a Member</li>
-            <li>Make a Donation</li>
-        </ul>
-    </div>
+        <div class="top-header-upper">
+            <div class="top-header-upper-wrapper">
+                <img src="the met logo.png" width="3.5%">
+                <ul>
+                    <button class="ticket">Buy tickets</button>
+                    <li>Become a Member</li>
+                    <li>Make a Donation</li>
+                </ul>
+            </div>
         </div>
         <div class="top-header-lower">
-    <div class="top-header-lower-wrapper">
-        <ul>
-            <button>Visit</button>
-            <button>Exhibitions and Events</button>
-            <button>Art</button>
-            <button>Learn With Us</button>
-            <button>Research</button>
-            <button>Shop</button>
-        
-            <button id="search-button">🔍 Search</button>
-        </ul>
-        
-    </div>
+            <div class="top-header-lower-wrapper">
+                <ul>
+                    <button>Visit</button>
+                    <button>Exhibitions and Events</button>
+                    <button>Art</button>
+                    <button>Learn With Us</button>
+                    <button>Research</button>
+                    <button>Shop</button>
+
+                    <button id="search-button">🔍 Search</button>
+                </ul>
+
+            </div>
         </div>
 
-</header>
+    </header>
 
-<div class="welcome-screen">
-    <h1>Welcome To The Met</h1>
-    <button>Plan your visit</button>
-    <iframe class="video-banner_vimeoContainer__PD__H" src="https://player.vimeo.com/video/1005860652?speed=0&amp;pip=0&amp;loop=1&amp;background=1&amp;app_id=122963" height="100%" width="100%" data-sentry-component="VideoWrapper" data-sentry-source-file="index.jsx"></iframe>
-</div>
-
-
-
-<div class="content">
-    <h2>Now on View</h2>
-    <div class="flex-box">
-        <div class="grid">
-            <img src="image1.jpg" alt="Image 1">
-            <h3>Title 1</h3>
-            <p>Short description of the first image goes here.</p>
-        </div>
-        <div class="grid">
-            <img src="image2.jpg" alt="Image 2">
-            <h3>Title 2</h3>
-            <p>Short description of the second image goes here.</p>
-        </div>
+    <div class="welcome-screen">
+        <h1>Welcome To The Met</h1>
+        <button>Plan your visit</button>
+        <iframe class="video-banner_vimeoContainer__PD__H"
+            src="https://player.vimeo.com/video/1005860652?speed=0&amp;pip=0&amp;loop=1&amp;background=1&amp;app_id=122963"
+            height="100%" width="100%" data-sentry-component="VideoWrapper"
+            data-sentry-source-file="index.jsx"></iframe>
     </div>
 
 
-</div>
 
+    <div class="content">
+        <h1>Now on View</h1>
 
-
-
-<div class="top-footer">
-    <div class="top-footer-wrapper">
-        <p>Bring some culture to your inbox</p>
-        <input type="text" class="inbox-input" placeholder="Enter your email to sign up for our newsletter.">
-    </div>
-    <img src="right-arrow-icon-27.png" width="2%">
-</div>
-
-    <img class ="met-logo" src="the met black.png" width="8%">
-<footer class="footer">
-    <div class="footer-section">  
-        <div class="footer-cluster">
-        <h3>The Met Fifth Avenue</h3>
-        <p>1000 Fifth Avenue<br>
-        New York, NY 10028<br>
-         Phone: 212-535-7710</p>
+        <div class="flex-box">
+            <div class="grid">
+                <img src="Mexican Prints.png">
+                <h3>Mexican Prints at the Vanguard</h3>
+                <p>Through January 5, 2025</p>
+                <p>The Met Fifth Avenue</p>
+            </div>
+            <div class="grid">
+                <img src="genesis.png">
+                <h3>The Genesis Facade Commission: Lee Bul, Long Tail Halo</h3>
+                <p>Through May 27th, 2025</p>
+                <p>The Met Fifth Avenue</p>
+            </div>
         </div>
-        <div class="footer-cluster">
-            <h3>The Met Cloisters</h3>
-            <p>99 Margaret Corbin Drive<br>
-                Fort Tryon Park<br>
-                New York, NY 10040<br>
-                Phone: 212-923-3700</p>
+
+        <h1>Locations and Hours</h1>
+
+        <div class="flex-box">
+            <div class="grid" id="gray">
+                <img src="5th.png">
+                <h2>The Met 5th Avenue</h2>
+                <h4>Over 5,000 years of art from around the world.</h4>
+                <h5 class="red">Next open tomorrow at 10 am</h5>
+                <h6 class="desc"><b>Hours:</b> Sunday–Tuesday and Thursday: 10 am–5 pm</h6>
+                <h6 class="desc"><b>Extended Hours:</b> Friday and Saturday: 10 am–9 pm</h6>
+                <h6 class="desc"><b>Closed:</b> Wednesday</h6>
+                <h6 class="desc-2">Closed Thanksgiving Day, December 25, January 1, and the first Monday in May.</h6>
+            </div>
+
+            <div class="grid" id="gray">
+                <img src="cloisters.png">
+                <h2>The Met Cloisters</h2>
+                <h4>Art, architecture, and gardens of medieval Europe.</h4>
+                <h5 class="red">Next open tomorrow at 10 am</h5>
+                <h6 class="desc"><b>Hours:</b> Sunday–Tuesday and Thursday: 10 am–5 pm</h6>
+                <h6 class="desc"><b>Closed:</b> Wednesday</h6>
+                <h6 class="desc-2">Closed Thanksgiving Day, December 25, and January 1.</h6>
+            </div>
+        </div>
+
+
+        <div class="flex-box-2">
+            <div class="grid-2">
+                <img src="milestone.png">
+            </div>
+            <div class="grid-2" id="gray">
+                <h2>An Exciting Milestone for the Redesign of The Met’s Galleries <br>for Modern and Contemporary Art
+                </h2>
+                <h3>Director and CEO Max Hollein celebrates an important moment as the Museum moves forward with
+                    renovation plans for the new Oscar L. and H.M. Agnes Hsu-Tang Wing with architect Frida Escobedo,
+                    the first woman to design a wing in the Museum’s 154-year history.</h3>
+                <button>Read More</button>
+            </div>
+
+
+            <div class="grid-2" id="gray">
+                <h2>Hispanic/Latine Heritage Month</h2>
+                <h3>Celebrate the rich culture and history of the Hispanic and Latine community all month long through
+                    art, talks, digital content, and more.</h3>
+                <button>Learn More</button>
+            </div>
+            <div class="grid-2">
+                <img src="hispanic.png">
+            </div>
+
+            <div class="grid-2">
+                <img src="membership.png">
+            </div>
+            <div class="grid-2" id="gray">
+                <h2>Membership at The Met</h2>
+                <h3>Met Members enjoy a rich variety of specialized benefits—from free guest passes to Member Preview
+                    Days for new exhibitions—all while supporting our mission.</h3>
+                <button>See the benefits</button>
+            </div>
+
+            <div class="grid-2" id="gray">
+                <h2>New Arrivals at The Met Store</h2>
+                <h3>Discover dozens of just-launched designs, including our latest iPhone cases and power pods from our
+                    collaboration with Casely.</h3>
+                <button>See what's new</button>
+            </div>
+            <div class="grid-2">
+                <img src="phones.png">
+            </div>
+
+
+
         </div>
     </div>
-    <div class="footer-section">
-        <div class="footer-cluster">
-            <p>About The Met</p>
+
+
+
+
+    <div class="top-footer">
+        <div class="top-footer-wrapper">
+            <p>Bring some culture to your inbox</p>
+            <input type="text" class="inbox-input" placeholder="Enter your email to sign up for our newsletter.">
+        </div>
+        <img class="right-arrow" src="right-arrow-icon-27.png">
+    </div>
+
+    <img class="met-logo" src="the met black.png">
+    <footer class="footer">
+        <div class="footer-section">
+            <div class="footer-cluster">
+                <h3>The Met Fifth Avenue</h3>
+                <p>1000 Fifth Avenue<br>
+                    New York, NY 10028<br>
+                    Phone: 212-535-7710</p>
+            </div>
+            <div class="footer-cluster">
+                <h3>The Met Cloisters</h3>
+                <p>99 Margaret Corbin Drive<br>
+                    Fort Tryon Park<br>
+                    New York, NY 10040<br>
+                    Phone: 212-923-3700</p>
+            </div>
+        </div>
+        <div class="footer-section">
+            <div class="footer-cluster">
+                <p>About The Met</p>
                 <p>Mission and History</p>
                 <p>Collection Areas</p>
                 <p>Conservation Departments</p>
                 <p>Accessibility</p>
                 <p>Press</p>
+            </div>
+            <div class="footer-cluster">
+                <h3>Follow us</h3>
+                <img class="media-strip" src="media strip.png">
+            </div>
         </div>
-        <div class="footer-cluster">
-            <h3>Follow us</h3>
-            <img src="media strip.png" width="100%">
+        <div class="footer-section">
+            <div class="footer-cluster">
+                <p>Support</p>
+                <p> Membership</p>
+                <p>Host an Event</p>
+                <p> Travel with The Met</p>
+                <p> Corporate Support</p>
+            </div>
+            <div class="footer-cluster">
+                <h3>Join our newsletter</h3>
+                <input type="text" class="newsletter-input" placeholder="Enter your email">
+            </div>
         </div>
-    </div>
-    <div class="footer-section">
-        <div class="footer-cluster">
-            <p>Support</p>
-            <p> Membership</p>
-            <p>Host an Event</p>
-            <p> Travel with The Met</p>
-            <p> Corporate Support</p>
+        <div class="footer-section">
+            <div class="footer-cluster">
+                <p>Career Opportunities</p>
+                <p> Volunteers</p>
+                <p> Fellowships</p>
+                <p> Internships</p>
+            </div>
         </div>
-        <div class="footer-cluster">
-            <h3>Join our newsletter</h3>
-            <input type="text" class="newsletter-input" placeholder="Enter your email">
-                </div>
-    </div>
-    <div class="footer-section">
-        <div class="footer-cluster">
-            <p>Career Opportunities</p>
-            <p>  Volunteers</p>
-            <p> Fellowships</p>
-            <p> Internships</p>
-        </div>
-    </div>
-</footer>
+    </footer>
 
-  
+
 </body>
+
 </html>
